sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/MissingElseIfAndElse.sand
pub class MissingElseIfAndElse {
    foo() {
        let a = if let b = c {
            c
        };
    }
}